# bb-calc

./: README.md  pyproject.toml
bb_calc/: __init__.py  pnl_calculator.py
docs/: usage.md
tests/: conftest.py  test_pnl_calculator.py
tests/data/: sample_trades.csv
